--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -5,14 +5,14 @@
   right: 0;
   width: 100%;
   height: 90px;
-  background-color: var(--color-nav);
+  /* background-color: var(--color-nav); */
   color: white;
   display: flex;
   align-items: center;
   padding: 0 3%;
   z-index: 99999;
   justify-content: space-between;
-  border-bottom: gold solid 2px;
+  /* border-bottom: gold solid 2px; */
 }
 .nav ul {
   width: 60%;
